2012-12-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Add hooks to detect libusb20 API (on FreeBSD)
	* src/jtag2usb.cc: Use libusb20 API if present; the libusb-0.1
	emulation that sits on top of it in FreeBSD 8+ doesn't allow for
	the kind of multithreading used here.

2012-12-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Martin Cerveny:
	Bug #15 usblib timeouts does not work correctly on solaris platforms
	* src/jtag2usb.cc: Rewrite the USB daemon into Posix threads.
	* src/jtag2io.cc: (Dito.)
	* src/jtag.h: (Dito.)
	* src/jtag2run.cc: (Dito.)
	* src/jtaggeneric.cc: (Dito.)
	* m4_ax_pthread.m4: New file (pthread glue)
	* configure.ac: Include pthread detection.

2012-12-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2_io_exception::jtag2_io_exception):
	Fix a typo.

2012-12-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc (usb_daemon): Restructure the receiver
	logic so it no longer depends on the JTAGICEmkII message
	length indication.

2012-11-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/ocdrev.xsl: Extract OCD_REVISION out of Atmel Studio
	6.x XML device files

2012-11-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/pdml.xsl: New XSLT stylesheet to analyze Wireshark
	USB traces exported as PDML data

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for post-release 2.13

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for release 2.13

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Martin Cerveny (patch #3495107):
	Add IO register info for a large number of mega and tiny AVRs
	* src/devdescr.cc: add pointers to IO register definitions
	* src/ioreg.h: add declarations for the IO register definitions,
	extend "reg_addr" to "unsigned int" to accomodate space for the
	IO registers in newer AVRs
	* src/ioreg.cc: add new IO register definitions

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
